Icon files added. Delete Mock API added

--- a/react-basics/class-components/src/components/contact-item/style.module.scss
+++ b/react-basics/class-components/src/components/contact-item/style.module.scss
@@ -45,3 +45,17 @@
   font-weight: bold;
   color: #4caf50;
 }
+
+.iconBox {
+  display: inline;
+  float: right;
+}
+
+.icon {
+  width: 22px;
+  margin: 2px 2px;
+}
+
+.icon:hover {
+  cursor: pointer;
+}
