--- a/react-basics/class-components/src/components/filter/style.module.scss
+++ b/react-basics/class-components/src/components/filter/style.module.scss
@@ -1,11 +1,10 @@
 .inputBox {
   box-shadow: 1px 1px 6px #627266;
   padding: 6px;
-  margin: 12px 0;
+  margin: 12px 12px;
   min-width: 250px;
   max-width: 85%;
   border-radius: 16px;
-  position: relative;
   font-size: 14px;
   color: rgb(35, 112, 11);
   font-weight: bold;
