--- a/react-basics/class-components/src/App.css
+++ b/react-basics/class-components/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 15vmin;
   pointer-events: none;
 }
 
@@ -40,4 +40,8 @@
   height: min-content;
   margin-top: 6%;
   margin-right: 4px;
+}
+
+.icon:hover {
+  cursor: pointer;
 }
